--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 *.log
 temp
 tmp
+.settings
+.project
+.classpath
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -13,3 +16,4 @@ tmp
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
