--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
  
-  <groupId>com.orgapp.app</groupId>
-  <artifactId>OrgApp</artifactId>
+  <groupId>com.orgapp.jpa</groupId>
+  <artifactId>orgappJPA</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
  
