--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
  
-  <groupId>com.orgapp.app</groupId>
-  <artifactId>OrgApp</artifactId>
+  <groupId>com.orgapp.jpa</groupId>
+  <artifactId>orgappJPA</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
  
@@ -16,5 +16,37 @@
       <version>4.8.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-compiler-plugin</artifactId>
+    	<version>3.5.1</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>5.2.4.Final</version>
+    </dependency>  
+    
+	<dependency>
+	    <groupId>com.h2database</groupId>
+	    <artifactId>h2</artifactId>
+	    <version>1.4.192</version>
+	</dependency>    
+    
   </dependencies>
+  
+  <build>
+  	<plugins>
+  	  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+  	</plugins>
+  </build>
 </project>
